<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">睿智儿童</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="toppager">首页</string>
    <string name="train">能力培养</string>
    <string name="test">故事列表</string>
    <string name="title_activity_word">MainActivity</string>
    <string name="title_activity_wording">WordingActivity</string>
    <string name="register">新用户</string>
    <string name="login">登陆</string>
    <string name="change">切换账号</string>
    <string name="exit">退出</string>
    <string name="commit">提交</string>
    <string name="forgot">忘记密码</string>
    <string name="title_activity_calculate">CalculateActivity</string>
    <string name="title_activity_facade">FacadeActivity</string>
    <string name="title_activity_word_game">WordGameActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="title_activity_remember">RememberActivity</string>
    <string name="title_activity_theme">ThemeActivity</string>
    <string name="title_activity_re_train">ReTrainActivity</string>
    <string name="title_activity_think">ThinkActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_game_load">GameLoadActivity</string>
    <string name="title_activity_forget">ForgetActivity</string>
    <string name="title_activity_check">CheckActivity</string>
	<string name="yourpassword">您的密码为：</string>
</resources>
